syntax = "proto3";
package gedit.store;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.store.owner.grpc";
option java_outer_classname = "StoreOwnerProto";
option objc_class_prefix = "STOWN";

import "gedit/common.proto";

// The storeowner service definition.
service StoreOwnerApi {

    rpc Transfer (TransferOwnershipRequest) returns (OwnershipResponse) {
        //should be only used by me or authorized users(e.g. administrator)
    }

    rpc ListByOwner (ListOwnershipByOwnerRequest) returns (stream OwnershipResponse) {
        //should be only used by authorized users(e.g. administrator)
    }

    rpc ListMyStore (ListMyStoreRequest) returns (stream OwnershipResponse) {
        //should be only used by me
    }

}


message TransferOwnershipRequest {
    string storeUuid = 1;
    string userUuid = 3;
}

message ListOwnershipByOwnerRequest {
    string ownerUuid = 3;
    int32 from = 100;
    int32 size = 101;
}


message ListMyStoreRequest {
    int64 lastUpdated = 1;
}


message OwnershipResponse {
    Status status = 999;
    Ownership ownership = 1;
    int32 from = 100;
}

message Ownership{
    //我的
    string userUuid = 1;
    string storeUuid = 5;

    string storeName = 7;
    string storeLogo = 9;
    Location location = 11;

    bool active = 27;
    int64 created = 29;
    int64 lastUpdated = 30;

}
