syntax = "proto3";
package store;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.store.owner.grpc";
option java_outer_classname = "StoreOwnerProto";
option objc_class_prefix = "STOWN";

import "common/common.proto";

// The storeowner service definition.
service StoreOwner {

    rpc Transfer (TransferRequest) returns (OwnershipResponse) {
    }

    rpc ListByOwner (ListByOwnerRequest) returns (stream OwnershipResponse) {
    }
}


message TransferRequest {
    string storeId = 1;
    string userId = 3;
}

message ListByOwnerRequest {
    string ownerId = 3;
    int32 from = 100;
    int32 size = 101;
}


message OwnershipResponse {
    common.Status status = 999;
    string ownerId = 1;
    string storeId = 5;
    bool active = 7;
    int64 startTime = 9;
    int64 endTime = 10;

    int32 from = 100;
}

